--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,17 +10,18 @@
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+* {
+    font-family: 'Inter', sans-serif;
+}
+
 [x-cloak] {
     display: none !important;
 }
 
-nav {
-    background-color: #111827;
-    color: white;
-}
-
 aside {
-    background-color: #1f2937;
+    background-color: #111827;
     color: white;
     transition: all 0.3s ease-in-out;
 }
@@ -30,7 +31,7 @@ main {
 }
 
 .card {
-    @apply bg-white rounded-xl p-6 mb-6 border border-gray-100;
+    @apply bg-white rounded-xl p-6 mb-6 shadow-sm;
 }
 
 .table-auto th,
